--- a/index.html
+++ b/index.html
@@ -69,6 +69,37 @@
             </ul>
           </nav>
           <h1>Путешествия по Байкалу</h1>
+          <div class="tours">
+            <p>
+              Туры по самому красивому месту России. Поехали с нами за новыми
+              впечатлениями!
+            </p>
+            <button class="choose-tour" type="submit">подобрать тур</button>
+          </div>
+          <div>
+            <!-- <svg class="arrow">
+              <use href="./icom.svg#arrow"></use>
+            </svg> -->
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="conteiner">
+          <ul>
+            <li>
+              <p>Турбазы на Байкале</p>
+            </li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </div>
       </section>
     </main>
